--- a/style.css
+++ b/style.css
@@ -1,110 +1,227 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,400;0,700;1,800&display=swap');
 
+/*DESKTOP*/
+@media screen and (min-width: 600px) {
 
-body{
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: hsl(0, 0%, 94%);
-    font-family: 'Overpass', sans-serif;
+    body {
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: hsl(0, 0%, 94%);
+        font-family: 'Overpass', sans-serif;
+    }
+
+    .container {
+        background-color: white;
+        width: 650px;
+        height: 500px;
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 25px 25px 140px 25px;
+    }
+
+    .container .text {
+        color: hsl(0, 1%, 44%);
+        font-size: 14px;
+        font-weight: 800;
+        letter-spacing: 3px;
+    }
+
+    .container input {
+        width: 110px;
+        height: 50px;
+        padding-top: 7px;
+        padding-left: 15px;
+        border-radius: 10px;
+        border: 1px solid hsl(0, 0%, 83%);
+        font-size: 25px;
+        font-weight: 700;
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    .container input::placeholder {
+        color: hsl(0, 1%, 44%);
+        font-weight: 800;
+        font-size: 24px;
+    }
+
+    .recebe {
+        display: flex;
+        gap: 30px;
+        margin-left: 50px;
+        margin-top: 30px;
+    }
+
+    .result {
+        display: flex;
+        width: 400px;
+        height: 100px;
+        margin-top: 0px;
+
+    }
+
+    .result h1 {
+        font-style: italic;
+        font-weight: 800;
+        font-size: 60px;
+        margin-left: 50px;
+    }
+
+    .resultado {
+        color: hsl(259, 100%, 65%);
+    }
+
+    .linha {
+        width: 600px;
+        height: 1px;
+        position: relative;
+    }
+
+    .linha button {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background-color: hsl(259, 100%, 65%);
+        position: absolute;
+        right: 0;
+        border: none;
+        cursor: pointer;
+    }
+
+    .linha button:hover {
+        background-color: black;
+    }
+
+    .bola img {
+        margin-left: 17px;
+        margin-top: 17px;
+    }
+
+    .error {
+        margin-top: 5px;
+        color: red;
+        font-size: 14px;
+        display: none;
+    }
 }
 
-.container{
-    background-color: white;
-    width: 650px;
-    height: 500px;
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 25px 25px 140px 25px;
-}
 
-.container .text{
-    color: hsl(0, 1%, 44%);
-    font-size: 14px;
-    font-weight: 800;
-    letter-spacing: 3px;
-}
 
-.container input{
-    width: 110px;
-    height: 50px;
-    padding-top: 7px;
-    padding-left: 15px;
-    border-radius: 10px;
-    border: 1px solid hsl(0, 0%, 83%);
-    font-size: 25px;
-    font-weight: 700;
-}
+/*MOBILE*/
+@media screen and (max-width: 600px){
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
+    body {
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: hsl(0, 0%, 94%);
+        font-family: 'Overpass', sans-serif;
+    }
 
-.container input::placeholder{
-    color: hsl(0, 1%, 44%);
-    font-weight: 800;
-    font-size: 24px;
-}
+    .container {
+        background-color: white;
+        width: 380px;
+        height: 520px;
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 25px 25px 140px 25px;
+    }
 
-.recebe{
-    display: flex;
-    gap: 30px;
-    margin-left: 50px;
-    margin-top: 30px;
-}
+    .container .text {
+        color: hsl(0, 1%, 44%);
+        font-size: 14px;
+        font-weight: 800;
+        letter-spacing: 2px;
+    }
 
-.result{
-    display: flex;
-    width: 400px;
-    height: 100px;
-    margin-top: 0px;
-    
-}
+    .container input {
+        width: 85px;
+        height: 50px;
+        padding-top: 7px;
+        padding-left: 10px;
+        border-radius: 10px;
+        border: 1px solid hsl(0, 0%, 83%);
+        font-size: 25px;
+        font-weight: 700;
+    }
 
-.result h1 {
-    font-style: italic;
-    font-weight: 800;  
-    font-size: 60px;
-    margin-left: 50px;
-}
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 
-.resultado{
-    color: hsl(259, 100%, 65%);
-}
+    .container input::placeholder {
+        color: hsl(0, 1%, 44%);
+        font-weight: 800;
+        font-size: 23px;
+    }
 
-.linha{
-    width: 600px;
-    height: 1px;
-    position: relative;    
-}
-.linha button{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: hsl(259, 100%, 65%);
-    position: absolute;
-    right: 0;
-    border: none;
-    cursor: pointer;
-}
+    .recebe {
+        display: flex;
+        gap: 20px;
+        margin-left: 20px;
+        margin-top: 30px;
+    }
 
-.linha button:hover{
-    background-color: black;
-}
+    .result {
+        display: flex;
+        width: 400px;
+        height: 100px;
+        margin-top: -20px;
+    }
 
-.bola img{
-    margin-left: 17px;
-    margin-top: 17px;
-}
+    .texto {
+        margin-top: 70px;
+    }
 
-.error{
-    margin-top: 5px;
-    color: red;
-    font-size: 14px;
-    display: none;
+    .result h1 {
+        font-style: italic;
+        font-weight: 800;
+        font-size: 60px;
+        margin-left: 20px;
+    }
+
+    .resultado {
+        color: hsl(259, 100%, 65%);
+    }
+
+    .linha {
+        width: 230px;
+        height: 1px;
+        position: relative;
+        margin-top: 30px;
+    }
+
+    .linha button {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background-color: hsl(259, 100%, 65%);
+        position: absolute;
+        right: 0;
+        border: none;
+        cursor: pointer;
+    }
+
+    .linha button:hover {
+        background-color: black;
+    }
+
+    .error {
+        margin-top: 5px;
+        color: red;
+        font-size: 14px;
+        display: none;
+    }
 }
